# portkit

./: .gitignore  CLAUDE.md  README.md  SETTINGS.md  pyproject.toml
docs/: 2025-06-23-CLEANUP.md  2025-06-23-REGISTRATION_TYPING.md  2025-06-23-TINYAGENT_LLM_UPDATE.md  2025-06-23_REGISTRY_TYPING.md  AUTO_FUZZ.md  BENCHMARK_FRAMEWORK_SPEC.md  CHVALID_PORT_PLAN.md  CHVALID_PORT_SUMMARY.md  COMPLETE_INTERRUPT_ANALYSIS.md  EVALUATION_STATUS.md  FIX_PROMPT_READING.md  INTERRUPT_ANALYSIS.md  PATCH_EVALUATION_SPEC.md  PATCH_FILE_TOOL_SPEC.md  PATCH_TOOL_LLM_PERFORMANCE_BUGS.md  SPEC.md  TIDYLLM_PORT.md  TODO_TINYAGENT.md  tidyapp_tools_specification.md  unified-implementation-plan.md
libxml2/: MODULE_ANALYSIS.md  PROGRESS_SUMMARY.md  PROJECT_SETUP.md  portkit_config.json  runtest.c  sourcemap.txt
libxml2/codegen/: genCharset.py  genEscape.py  genHtml5Ent.py  genHtml5LibTests.py  genRanges.py  genTestApi.py  genUnicode.py  xmlmod.py
libxml2/docs/: merged-build-spec.md
libxml2/module_analysis/: 00001-xmlstring.yaml  00002-chvalid.yaml  00003-dict.yaml  00004-hash.yaml  00005-list.yaml  00006-buf.yaml  00007-xmlmemory.yaml  00008-error.yaml  00009-threads.yaml  00010-encoding.yaml  00011-xmlio.yaml  00012-uri.yaml  00013-entities.yaml  00014-tree.yaml  00015-xmlsave.yaml  00016-parser-internals.yaml  00017-parser.yaml  00018-sax2.yaml  00019-xpath.yaml  00020-pattern.yaml  00021-xpointer.yaml  00022-valid.yaml  00023-xmlregexp.yaml  00024-xmlschemas.yaml  00025-relaxng.yaml  00026-schematron.yaml  00027-htmlparser.yaml  00028-htmltree.yaml  00029-xmlreader.yaml  00030-xmlwriter.yaml  00031-c14n.yaml
libxml2/port/: PROJECT_ANALYSIS.md
libxml2/python/: generator.py  libxml.py
libxml2/rust/: Cargo.toml  build.rs  compat.h  test_migration.sh  wrapper.h
libxml2/rust/fuzz/: .gitignore  Cargo.toml  fuzz_chvalid.rs  fuzz_dict.rs  fuzz_xmlstring.rs
libxml2/rust/fuzz/fuzz_targets/: fuzz_chvalid.rs
libxml2/rust/src/: ffi.rs  fuzz_buf.rs  fuzz_c14n.rs  fuzz_encoding.rs  fuzz_entities.rs  fuzz_error.rs  fuzz_hash.rs  fuzz_htmlparser.rs  fuzz_htmltree.rs  fuzz_list.rs  fuzz_parser.rs  fuzz_parser_internals.rs  fuzz_pattern.rs  fuzz_relaxng.rs  fuzz_sax2.rs  fuzz_schematron.rs  fuzz_threads.rs  fuzz_tree.rs  fuzz_uri.rs  fuzz_valid.rs  fuzz_xmlio.rs  fuzz_xmlmemory.rs  fuzz_xmlreader.rs  fuzz_xmlregexp.rs  fuzz_xmlsave.rs  fuzz_xmlschemas.rs  fuzz_xmlwriter.rs  fuzz_xpath.rs  fuzz_xpointer.rs  lib.rs  libxml2_dynload.rs
libxml2/rust/src/buf/: mod.rs
libxml2/rust/src/c14n/: mod.rs
libxml2/rust/src/chvalid/: core.rs  ffi.rs  mod.rs  port.md  ranges.rs
libxml2/rust/src/dict/: mod.rs
libxml2/rust/src/encoding/: mod.rs
libxml2/rust/src/entities/: mod.rs
libxml2/rust/src/error/: mod.rs
libxml2/rust/src/hash/: mod.rs
libxml2/rust/src/htmlparser/: mod.rs
libxml2/rust/src/htmltree/: mod.rs
libxml2/rust/src/list/: mod.rs
libxml2/rust/src/parser/: mod.rs
libxml2/rust/src/parser_internals/: mod.rs
libxml2/rust/src/pattern/: mod.rs
libxml2/rust/src/relaxng/: mod.rs
libxml2/rust/src/sax2/: mod.rs
libxml2/rust/src/schematron/: mod.rs
libxml2/rust/src/threads/: mod.rs
libxml2/rust/src/tree/: mod.rs
libxml2/rust/src/uri/: mod.rs
libxml2/rust/src/valid/: mod.rs
libxml2/rust/src/xmlio/: mod.rs
libxml2/rust/src/xmlmemory/: mod.rs
libxml2/rust/src/xmlreader/: mod.rs
libxml2/rust/src/xmlregexp/: mod.rs
libxml2/rust/src/xmlsave/: mod.rs
libxml2/rust/src/xmlschemas/: mod.rs
libxml2/rust/src/xmlstring/: mod.rs
libxml2/rust/src/xmlwriter/: mod.rs
libxml2/rust/src/xpath/: mod.rs
libxml2/rust/src/xpointer/: mod.rs
libxml2/rust/tests/: abi_compat.rs  dict_test.rs  libxml2_tests.rs  xmlstring_test.rs
libxml2/xstc/: fixup-tests.py
portkit/: c_traversal.py  checkpoint.py  claude.py  codex.py  config.py  console.py  implfuzz.py  interrupt.py  rustc.py  setup_rust.py  sourcemap.py  tinyagent.py
portkit/prompts/: BUILD_RS_GENERATION.md  MODULE_ANALYSIS.md  MODULE_PORT.md  RUST_PORTING.md  example_fuzz_test.md  unified_implementation.md
portkit/tidyllm/: README.md  __init__.py  benchmark.py  cli.py  discover.py  docstring.py  evaluation.py  library.py  llm.py  prompt.py  protocol_utils.py  registry.py  schema.py
portkit/tinyagent/: README.md  __init__.py  agent.py  context.py  patch.py  portkit_agent.py
portkit/tools/: common.py  list_files.py  read_files.py  replace_file.py  search_files.py  shell.py
scripts/: cost_analysis.py  debug_prompt.py  replay_litellm.py  setup_rust_project.py
tests/: test.patch  test_c_project_analyzer.py  test_c_traversal.py  test_implfuzz.py  test_mutation_tracking.py  test_patch.py  test_rustc.py  test_search.py  test_search_regex.py  test_sourcemap.py  test_symbols.py
zopfli-port/: debug_test.c  portkit_config.json  rust_test1.deflate  rust_test1.zlib  test_crash.c
zopfli-port/rust/fuzz/: Cargo.toml
zopfli-port/rust/fuzz/fuzz_targets/: fuzz_AbsDiff.rs  fuzz_AddBit.rs  fuzz_AddBits.rs  fuzz_AddDynamicTree.rs  fuzz_AddHuffmanBits.rs  fuzz_AddLZ77Block.rs  fuzz_AddLZ77BlockAutoType.rs  fuzz_AddLZ77Data.rs  fuzz_AddNonCompressedBlock.rs  fuzz_CalculateBlockSymbolSize.rs  fuzz_CalculateBlockSymbolSizeGivenCounts.rs  fuzz_CalculateBlockSymbolSizeSmall.rs  fuzz_CalculateTreeSize.rs  fuzz_EncodeTree.rs  fuzz_GetDynamicLengths.rs  fuzz_GetFixedTree.rs  fuzz_OptimizeHuffmanForRle.rs  fuzz_PatchDistanceCodesForBuggyDecoders.rs  fuzz_TryOptimizeHuffmanForRle.rs  fuzz_ZopfliAllocHash.rs  fuzz_ZopfliAppendLZ77Store.rs  fuzz_ZopfliBlockSplit.rs  fuzz_ZopfliBlockSplitLZ77.rs  fuzz_ZopfliBlockSplitSimple.rs  fuzz_ZopfliCacheToSublen.rs  fuzz_ZopfliCalculateBitLengths.rs  fuzz_ZopfliCalculateBlockSize.rs  fuzz_ZopfliCalculateBlockSizeAutoType.rs  fuzz_ZopfliCalculateEntropy.rs  fuzz_ZopfliCleanBlockState.rs  fuzz_ZopfliCleanCache.rs  fuzz_ZopfliCleanHash.rs  fuzz_ZopfliCleanLZ77Store.rs  fuzz_ZopfliCompress.rs  fuzz_ZopfliCopyLZ77Store.rs  fuzz_ZopfliDeflate.rs  fuzz_ZopfliDeflatePart.rs  fuzz_ZopfliFindLongestMatch.rs  fuzz_ZopfliFormat.rs  fuzz_ZopfliGetDistExtraBits.rs  (+29 more)
zopfli/rust/fuzz/: Cargo.toml
(+152 files in other folders)
