[package]
name = "libxml2-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
default = ['cc', 'glob']
chvalid = ["libxml2/rust-chvalid"]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
libc = "0.2"
glob = "0.3"

[build-dependencies]
cc = { version = "1.0", optional = true }
glob = { version = "0.3", optional = true }

[dependencies.libxml2]
path = ".."

[[bin]]
name = "fuzz_dummy"
path = "fuzz_targets/fuzz_dummy.rs"
test = false
doc = false

[[bin]]
name = "fuzz_chvalid"
path = "fuzz_targets/fuzz_chvalid.rs"
test = false
doc = false
required-features = ["chvalid"]
